welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:3: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true;
           ^hasTeen:3: warning: enclosing method verif has result type Unit: return value discarded
    return true;
    ^hasTeen:5: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return false;
           ^hasTeen:5: warning: enclosing method verif has result type Unit: return value discarded
    return false;
    ^hasTeen:10: error: value || is not a member of Unit
  if ( verif(a) || verif(b) || verif(c) ){
                ^